// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/swift/index extractPackageFile() parses multiple packages 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"master\\"
        ",
      "datasource": "git-tags",
      "depName": "0x7fs/CountedSet",
      "lookupName": "https://github.com/0x7fs/CountedSet",
    },
    Object {
      "currentValue": "0.1.0",
      "datasource": "git-tags",
      "depName": "avito-tech/GraphiteClient",
      "lookupName": "https://github.com/avito-tech/GraphiteClient.git",
    },
    Object {
      "currentValue": "1.0.16",
      "datasource": "git-tags",
      "depName": "IBM-Swift/BlueSignals",
      "lookupName": "https://github.com/IBM-Swift/BlueSignals.git",
    },
    Object {
      "currentValue": "\\"UpdateSocket\\"
        ",
      "datasource": "git-tags",
      "depName": "beefon/Shout",
      "lookupName": "https://github.com/beefon/Shout",
    },
    Object {
      "currentValue": "3.0.6",
      "datasource": "git-tags",
      "depName": "daltoniam/Starscream",
      "lookupName": "https://github.com/daltoniam/Starscream.git",
    },
    Object {
      "currentValue": "1.4.6",
      "datasource": "git-tags",
      "depName": "httpswift/swifter",
      "lookupName": "https://github.com/httpswift/swifter.git",
    },
    Object {
      "currentValue": "from : \\"0.9.6\\"",
      "datasource": "git-tags",
      "depName": "weichsel/ZIPFoundation",
      "lookupName": "https://github.com/weichsel/ZIPFoundation/",
    },
    Object {
      "currentValue": "\\"swift-5.0-branch\\"
    ",
      "datasource": "git-tags",
      "depName": "apple/swift-package-manager",
      "lookupName": "https://github.com/apple/swift-package-manager.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`manager/swift/index extractPackageFile() parses package descriptions 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "from:\\"1.2.3\\"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`manager/swift/index extractPackageFile() parses package descriptions 2`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"1.2.3\\"...",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`manager/swift/index extractPackageFile() parses package descriptions 3`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"1.2.3\\"...\\"1.2.4\\"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`manager/swift/index extractPackageFile() parses package descriptions 4`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "\\"1.2.3\\"..<\\"1.2.4\\"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`manager/swift/index extractPackageFile() parses package descriptions 5`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "...\\"1.2.3\\"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`manager/swift/index extractPackageFile() parses package descriptions 6`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "..<\\"1.2.3\\"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "lookupName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;
